fixed underline spacing

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 h1 {
-  margin-bottom: 0.1em;
+  margin-bottom: 0em;
 }
 
 a {
